--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
@@ -57,5 +58,6 @@
 </head>
   <body class="overflow-x-hidden min-h-screen bg-slate-950">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
